리팩토링을 통한 코드개선

--- a/실용적 테스트 코드.md
+++ b/실용적 테스트 코드.md
@@ -3,14 +3,14 @@
 코드를 작성 후 컴파일을 통해 실행해보는 것은 쉽지만 한계가 많다.
 
 - 첫째, 코드가 바뀔 때마다 이전에 추가했던 기능이 제대로 동작하는지 일일이 검사해야 한다.
-- 둘째, 모든 예외를 검사하는데 상당한 시ㅏㄴ과 노력이 든다.
+- 둘째, 모든 예외를 검사하는데 상당한 시간과 노력이 든다.
 - 셋째, 코드 리팩토링(코드의 동작을 바꾸지 않으면서 코드의 구조를 개선하는 것) 과정에서 코드가 망가지지 않았는지 알 수 있는 쉬운 방법이 없다.
 
 위의 한계로 인해 프로덕션 코드를 작성할 때에 테스트 코드를 작성하는 것이 권장된다.
 
 ## 테스트 주도 개발(TDD, Test Driven Development)
 
-```javascript
+```typescript
 // 에어비앤비 체크인 리마인더 코드의 일부분
 
 const needsCheckInOrOut = (
@@ -66,7 +66,7 @@ export default needsCheckInOrOut;
 
 - 테스트 코드 작성
 
-```javascript
+```typescript
 describe("needsCheckInOrOut", () => {
     const date = new Date("2019 1. 15.");
 
@@ -87,7 +87,7 @@ describe("needsCheckInOrOut", () => {
 
 - `needsCheckInOrOut` 함수의 두 번째 인자인 `now`는 `Date` 객체를 받는다.
 
-  ```javascript
+  ```typescript
   const needsCheckInOrOut = (
   	period: string,
       now = new Date(Date.now()), // now!
@@ -97,6 +97,7 @@ describe("needsCheckInOrOut", () => {
 - 체크인/체크아웃 기준 시간은 `now`를 기준으로 판단하기 때문에 인자로 만들어두면 테스트할 때 사용자가 원하는 임의의 값을 전달할 수 있다.
 
 - 이러한 패턴을 [의존성 주입(Dependency Injection)]([https://ko.wikipedia.org/wiki/%EC%9D%98%EC%A1%B4%EC%84%B1_%EC%A3%BC%EC%9E%85](https://ko.wikipedia.org/wiki/의존성_주입)) 이라 한다.
+  
   - 의존성을 가지는 부분을 외부로부터 제공받기 때문에 테스트하기 훨씬 용이한 코드가 된다.
 
 #### 의존성 주입을 할 수 없는 경우에는 Mock을 사용하라.
@@ -104,7 +105,7 @@ describe("needsCheckInOrOut", () => {
 - Mock은 실제 함수나 객체가 아니지만 그와 유사한 동작을 제공한다.
 - 의존성을 아예 외부 인자로 바꿀 수 있다면 가장 좋지만, 그렇지 않은 경우에는 Mock을 사용할 수 있다.
 
-```javascript
+```typescript
 beforeEach(async () => {
     MockDate.set(new Date("2019. 02. 18. 18:20:00"));
 })
@@ -122,7 +123,7 @@ afterEach(async () => {
 
 - 이 방식의 장점은 누구든지 테스트 케이스를 추가할 수 있고, 나중에 함수의 동작을 알고 싶을 때 테스트 케이스만 보면 쉽게 이해할 수 있다.
 
-```javascript
+```typescript
 test.each([
         ["Jan 13–18, 2019", date, { required: false, type: null }],
         ["Jan 13–15, 2019", date, { required: true, type: "check-out" }],
@@ -134,4 +135,125 @@ test.each([
 ```
 
 - 위의 코드를 보면 인자에 따라 함수의 리턴 타입이 어떻게 되는지, 함수가 어떤 형식의 날짜 스트링을 유효하다고 판단하는지 알 수 있다.
+
+#### 4. 리팩토링
+
+- 자동화된 테스트를 사용하면 직접 코드의 동작을 확인하는 방식을 사용할 때보다 자주 리팩토링을 할 수 있다.
+- 함수의 동작이 코드의 수정으로 인해 변경되더라도 다시 테스트를 통과하게 고쳐놓는다면 코드의 동작을 담보할 수 있기 때문이다.
+
+```typescript
+// 리팩토링을 거친 needsCheckInOrOut
+
+import { Message } from "../types";
+import { TWELVE_MONTHS } from "./constants";
+
+// helpers
+const mapToNumber = (numString: string[]) => {
+    return numString.map((str) => {
+        const num = Number(str);
+
+        return isNaN(num) ? str : num;
+    });
+};
+
+const getMonthNumber = (target: string) =>
+    TWELVE_MONTHS.findIndex((month) => month === target);
+
+// main
+const needsCheckInOrOut = (
+    period: string,
+    now = new Date(Date.now()),
+):
+    | {
+            type: Message
+            required: boolean,
+      }
+    | undefined => {
+    const periodMatcher = new RegExp(
+        `(${TWELVE_MONTHS.join("|")}) (\\d{1,2})–(${TWELVE_MONTHS.join(
+            "|",
+        )})\?\\s\?(\\d{1,2})`,
+    );
+    const matched = periodMatcher.exec(period);
+
+    if (matched) {
+        // map types to number
+        let [, month, startDate, month2, endDate] = mapToNumber(matched);
+
+        if (month2 && typeof month2 === "string") {
+            month2 = getMonthNumber(month2);
+        }
+
+        if (typeof month === "string") {
+            month = getMonthNumber(month);
+        }
+
+        const thisMonth = now.getMonth();
+        const currentDate = now.getDate();
+
+        const startsThisMonth =
+            month === thisMonth && startDate === currentDate;
+        const endsThisMonth =
+            month === thisMonth && endDate === currentDate;
+        const endsNextMonth =
+            month2 === thisMonth && endDate === currentDate;
+
+        let messageType: Message;
+
+        if (startsThisMonth) {
+            messageType = "check-in";
+        }
+
+        if (endsThisMonth || endsNextMonth) {
+            messageType = "check-out";
+        }
+
+        return {
+            required: startsThisMonth || endsThisMonth || endsNextMonth,
+            type: messageType,
+        };
+    }
+};
+
+export default needsCheckInOrOut;
+```
+
+1) 하드코딩된 정규식과 변수가 사라짐
+
+- 하드코딩(데이터를 직접 코드에 집어넣는 행위)은 코드에 중복을 만들어 유지보수를 어렵게 만든다. -> `TWELVE_MONTHS`라는 변수로 묶어서 정리
+
+2) 몇 개의 헬퍼 함수로 코드를 분리
+
+- 함수형 메소드(map, filter, reduce)를 길게 사용하면 코드의 동작이 한 눈에 들어오지 않느다. -> 그 부분을 각각의 함수로 만들어 함수 외부에 정리한다.
+
+3) if문의 길이는 짧게
+
+- if문의 boolean 조건을 변수로 만들어서 관리하면 가독성을 높일 수 있다.
+
+```typescript
+// 변화된 테스트 코드
+describe("needsCheckInOrOut", () => {
+    const date = new Date("2019 1. 15.");
+
+    test.each([
+        ["Jan 13–18, 2019", date, { required: false, type: undefined }],
+        ["Jan 13–15, 2019", date, { required: true, type: "check-out" }],
+        ["Jan 15–17, 2019", date, { required: true, type: "check-in" }],
+        [
+            "Jan 15–Feb 1, 2019",
+            date,
+            { required: true, type: "check-in" },
+        ],
+        [
+            "Dec 31–Jan 15, 2019",
+            date,
+            { required: true, type: "check-out" },
+        ],
+    ])("input: %s, %s)", (a, b, expected) => {
+        expect(needsCheckInOrOut(a, b)).toEqual(expected);
+    });
+});
+```
+
+![image-20200202231314063](images\image-20200202231314063.png)
 
